--- a/form-elments/elements.html
+++ b/form-elments/elements.html
@@ -5,26 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Html form elements</title>
     <style>
-      div {
+      input[type="text"] {
         padding: 5px;
         margin: 10px;
+        display: block;
       }
-      form {
+      /* form {
         border: 1px solid #000;
-      }
+        padding: 20px;
+      } */
     </style>
   </head>
   <body>
     <form>
-      <div>Name: <input type="text" placeholder="Enter Name" /></div>
+      <fieldset>
+        <legend>Registration</legend>
+        <div>Name: <input type="text" placeholder="Enter Name" /></div>
 
-      <input type="checkbox" />
-      <input type="color" disabled />
-      <input type="date" />
-      <input type="email" />
-      <input type="file" />
-      <input type="password" />
-      <input type="text" value="abc" disabled />
+        <input type="checkbox" />
+        <input type="color" disabled />
+        <input type="date" />
+        <input type="email" />
+        <input type="file" />
+        <input type="password" />
+        <input type="text" value="abc" disabled />
+        <br />
+        Male :<input type="radio" name="gender" /> Female :<input
+          type="radio"
+          name="gender"
+        />
+        Others :<input type="radio" name="gender" />
+        <div>
+          <p>browser supports typescript files?</p>
+          True <input type="radio" name="question1" /> False<input
+            type="radio"
+            name="question1"
+          />
+        </div>
+
+        <label>Courses:</label>
+        <select>
+          <option>--Select Course--</option>
+          <optgroup label="B.tech">
+            <option value="1">CSE</option>
+            <option value="1">ECE</option>
+            <option value="1">CIVIL</option>
+            <option value="1">MECH</option>
+          </optgroup>
+          <optgroup label="Intermediate">
+            <option value="1">MPC</option>
+            <option value="1">BIPC</option>
+            <option value="1">CEC</option>
+          </optgroup>
+        </select>
+        <input type="range" />
+        <input type="number" max="10" min="3" />
+        <textarea cols="10" rows="10"> </textarea>
+      </fieldset>
     </form>
   </body>
 </html>
