js course basics

--- a/progressbar/progressbar.html
+++ b/progressbar/progressbar.html
@@ -18,6 +18,11 @@
         transition: width 2s;
       }
 
+      @media screen and (max-width: 600px) {
+        .progress:hover {
+          background-color: gray;
+        }
+      }
       .progress:hover {
         width: 70%;
       }
