js objects and array methods

--- a/JavascriptCourse/Objects/Objects.html
+++ b/JavascriptCourse/Objects/Objects.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./Objects.js"></script>
+    <!-- <script src="./Objects.js"></script> -->
+    <script src="./ObjectCopy.js"></script>
   </head>
   <body></body>
 </html>
