--- a/JavascriptCourse/String Methods/stringmethods.html
+++ b/JavascriptCourse/String Methods/stringmethods.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arrays</title>
-    <!-- <script src="arrays.js"></script> -->
-    <script src="arraymethods.js"></script>
+    <title>String Mehods</title>
+    <script src="stringmethods.js"></script>
   </head>
-  <body>
-    <h1>Arrays</h1>
-  </body>
+  <body></body>
 </html>
